[package]
name = "zhongwen-anki"
version = "0.1.0"
authors = ["Armin Häberling <armin.aha@gmail.com>"]
edition = "2018"

description = "Tool to create Anki decks for learning Chinese"
homepage = "https://github.com/arminha/zhongwen-anki"
repository = "https://github.com/arminha/zhongwen-anki"

readme = "README.md"
license = "GPL-3.0"

[profile.release]
lto = true

[dependencies]
clap = { version = "4.1.6", features = ["derive", "wrap_help"] }
csv = "1.2.0"
lazy_static = "1.4.0"
serde = { version = "1.0.158", features = ["derive"] }
unicode-segmentation = "1.10.1"
